// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomAction generateCustomColumn generateCustomColumn 1.85, no handler, all properties 1`] = `
Object {
  "@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "NewColumn": Object {
        "availability": "Adaptation",
        "header": "col header",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "template": "ext.CustomColumn",
        "width": "150px",
      },
    },
  },
  "items/@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "CustomColumnOnObjectPage": Object {
        "availability": "Default",
        "header": "{i18n>customColumn}",
        "horizontalAlign": "Center",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "properties": Array [
          "BooleanProperty",
          "TextProperty",
        ],
        "template": "sap.fe.core.fpmExplorer.customColumnContent.CustomColumnButton",
        "width": "15em",
      },
      "anotherCustomColumnOnObjectPage": Object {
        "availability": "Adaptation",
        "header": "{i18n>customColumnAdaptation}",
        "horizontalAlign": "Begin",
        "template": "sap.fe.core.fpmExplorer.customColumnContent.CustomColumnAdaptation",
      },
    },
    "tableSettings": Object {
      "selectionMode": "Single",
    },
  },
}
`;

exports[`CustomAction generateCustomColumn generateCustomColumn 1.85, no handler, all properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\"
	xmlns:l=\\"sap.ui.layout\\">
	<l:VerticalLayout  core:require=\\"{ handler: 'sap/fe/core/fpmExplorer/customColumnContent/ext/CustomColumn'}\\">
		
			<Button text=\\"to be defined\\" press=\\"handler.buttonPressed\\" />
		
	</l:VerticalLayout>
</core:FragmentDefinition>
"
`;

exports[`CustomAction generateCustomColumn generateCustomColumn 1.85, no handler, no fs, all properties 1`] = `
Object {
  "@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "NewColumn": Object {
        "availability": "Adaptation",
        "header": "col header",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "template": "ext.CustomColumn",
        "width": "150px",
      },
    },
  },
  "items/@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "CustomColumnOnObjectPage": Object {
        "availability": "Default",
        "header": "{i18n>customColumn}",
        "horizontalAlign": "Center",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "properties": Array [
          "BooleanProperty",
          "TextProperty",
        ],
        "template": "sap.fe.core.fpmExplorer.customColumnContent.CustomColumnButton",
        "width": "15em",
      },
      "anotherCustomColumnOnObjectPage": Object {
        "availability": "Adaptation",
        "header": "{i18n>customColumnAdaptation}",
        "horizontalAlign": "Begin",
        "template": "sap.fe.core.fpmExplorer.customColumnContent.CustomColumnAdaptation",
      },
    },
    "tableSettings": Object {
      "selectionMode": "Single",
    },
  },
}
`;

exports[`CustomAction generateCustomColumn generateCustomColumn 1.85, no handler, no fs, all properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\"
	xmlns:l=\\"sap.ui.layout\\">
	<l:VerticalLayout  core:require=\\"{ handler: 'sap/fe/core/fpmExplorer/customColumnContent/ext/CustomColumn'}\\">
		
			<Button text=\\"to be defined\\" press=\\"handler.buttonPressed\\" />
		
	</l:VerticalLayout>
</core:FragmentDefinition>
"
`;

exports[`CustomAction generateCustomColumn generateCustomColumn 1.86, with handler, all properties 1`] = `
Object {
  "@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "NewColumn": Object {
        "availability": "Adaptation",
        "header": "col header",
        "horizontalAlign": "Center",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "properties": Array [
          "ID",
          "TotalNetAmount",
          "_CustomerPaymentTerms/CustomerPaymentTerms",
        ],
        "template": "ext.CustomColumn",
        "width": "150px",
      },
    },
  },
  "items/@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "CustomColumnOnObjectPage": Object {
        "availability": "Default",
        "header": "{i18n>customColumn}",
        "horizontalAlign": "Center",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "properties": Array [
          "BooleanProperty",
          "TextProperty",
        ],
        "template": "sap.fe.core.fpmExplorer.customColumnContent.CustomColumnButton",
        "width": "15em",
      },
      "anotherCustomColumnOnObjectPage": Object {
        "availability": "Adaptation",
        "header": "{i18n>customColumnAdaptation}",
        "horizontalAlign": "Begin",
        "template": "sap.fe.core.fpmExplorer.customColumnContent.CustomColumnAdaptation",
      },
    },
    "tableSettings": Object {
      "selectionMode": "Single",
    },
  },
}
`;

exports[`CustomAction generateCustomColumn generateCustomColumn 1.86, with handler, all properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\"
	xmlns:l=\\"sap.ui.layout\\">
	<l:VerticalLayout  core:require=\\"{ handler: 'sap/fe/core/fpmExplorer/customColumnContent/ext/CustomColumn'}\\">
		
			<Button text=\\"to be defined\\" press=\\"handler.buttonPressed\\" />
		
	</l:VerticalLayout>
</core:FragmentDefinition>
"
`;

exports[`CustomAction generateCustomColumn generateCustomColumn, no handler, only mandatory properties 1`] = `
Object {
  "@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "NewColumn": Object {
        "header": "col header",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "template": "ext.CustomColumn",
      },
    },
  },
  "items/@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "CustomColumnOnObjectPage": Object {
        "availability": "Default",
        "header": "{i18n>customColumn}",
        "horizontalAlign": "Center",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "properties": Array [
          "BooleanProperty",
          "TextProperty",
        ],
        "template": "sap.fe.core.fpmExplorer.customColumnContent.CustomColumnButton",
        "width": "15em",
      },
      "anotherCustomColumnOnObjectPage": Object {
        "availability": "Adaptation",
        "header": "{i18n>customColumnAdaptation}",
        "horizontalAlign": "Begin",
        "template": "sap.fe.core.fpmExplorer.customColumnContent.CustomColumnAdaptation",
      },
    },
    "tableSettings": Object {
      "selectionMode": "Single",
    },
  },
}
`;

exports[`CustomAction generateCustomColumn generateCustomColumn, no handler, only mandatory properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\"
	xmlns:l=\\"sap.ui.layout\\">
	<l:VerticalLayout  core:require=\\"{ handler: 'undefined'}\\">
		
			<Button text=\\"to be defined\\" press=\\"handler.\\" />
		
	</l:VerticalLayout>
</core:FragmentDefinition>
"
`;

exports[`CustomAction generateCustomColumn generateCustomColumn, no handler, only mandatory properties 3`] = `
Object {
  "@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "NewColumn": Object {
        "header": "col header",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "template": "ext.CustomColumn",
      },
    },
  },
  "items/@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "CustomColumnOnObjectPage": Object {
        "availability": "Default",
        "header": "{i18n>customColumn}",
        "horizontalAlign": "Center",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "properties": Array [
          "BooleanProperty",
          "TextProperty",
        ],
        "template": "sap.fe.core.fpmExplorer.customColumnContent.CustomColumnButton",
        "width": "15em",
      },
      "anotherCustomColumnOnObjectPage": Object {
        "availability": "Adaptation",
        "header": "{i18n>customColumnAdaptation}",
        "horizontalAlign": "Begin",
        "template": "sap.fe.core.fpmExplorer.customColumnContent.CustomColumnAdaptation",
      },
    },
    "tableSettings": Object {
      "selectionMode": "Single",
    },
  },
}
`;

exports[`CustomAction generateCustomColumn generateCustomColumn, no handler, only mandatory properties 4`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\"
	xmlns:l=\\"sap.ui.layout\\">
	<l:VerticalLayout  core:require=\\"{ handler: 'undefined'}\\">
		
			<Button text=\\"to be defined\\" press=\\"handler.\\" />
		
	</l:VerticalLayout>
</core:FragmentDefinition>
"
`;

exports[`CustomAction generateCustomColumn generateCustomColumn, no handler, only mandatory properties 5`] = `
Object {
  "@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "NewColumn": Object {
        "header": "col header",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "template": "ext.CustomColumn",
      },
    },
  },
  "items/@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "CustomColumnOnObjectPage": Object {
        "availability": "Default",
        "header": "{i18n>customColumn}",
        "horizontalAlign": "Center",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "properties": Array [
          "BooleanProperty",
          "TextProperty",
        ],
        "template": "sap.fe.core.fpmExplorer.customColumnContent.CustomColumnButton",
        "width": "15em",
      },
      "anotherCustomColumnOnObjectPage": Object {
        "availability": "Adaptation",
        "header": "{i18n>customColumnAdaptation}",
        "horizontalAlign": "Begin",
        "template": "sap.fe.core.fpmExplorer.customColumnContent.CustomColumnAdaptation",
      },
    },
    "tableSettings": Object {
      "selectionMode": "Single",
    },
  },
}
`;

exports[`CustomAction generateCustomColumn generateCustomColumn, no handler, only mandatory properties 6`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\"
	xmlns:l=\\"sap.ui.layout\\">
	<l:VerticalLayout  core:require=\\"{ handler: 'undefined'}\\">
		
			<Button text=\\"to be defined\\" press=\\"handler.\\" />
		
	</l:VerticalLayout>
</core:FragmentDefinition>
"
`;
